[package]
name = "space_todo"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["spacetimedb"]

[dependencies]
color-eyre = "0.6.5"
crossterm = "0.29.0"
dotenv = "0.15.0"
ratatui = "0.30.0"
ratatui-textarea = "0.9.0"
reqwest = { version = "0.13.2", features = ["blocking", "json"] }
serde = "1.0.228"
spacetimedb-sdk = { version = "2.1.*" }
